src/objects/Training_Plan_Section__c.object
<CustomObject>
    <fields>
        <fullName>Optional__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option if you plan to make all the items under this section optional</inlineHelpText>
        <label>Optional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <inlineHelpText>Number that defines the position in which this section will appear under the training plan</inlineHelpText>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Section_Items__c</fullName>
        <label>Total Section Items</label>
        <summaryForeignKey>Training_Plan_Section_Item__c.Training_Plan_Section__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Training_Plan__c</fullName>
        <label>Training Plan</label>
        <referenceTo>Training_Plan__c</referenceTo>
        <relationshipLabel>Training Plan Sections</relationshipLabel>
        <relationshipName>Training_Plan_Sections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Training Plan Section</label>
    <nameField>
        <label>Training Plan Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Plan Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>